--- a/css/styles.css
+++ b/css/styles.css
@@ -28,9 +28,7 @@ font-family: "Raleway", sans-serif;
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
-.header-menu-link {
 
-}
 .navigation-address {
     font-weight: 400;
     font-size: 16px;
@@ -95,7 +93,7 @@ background: #2e2f42;
 }
 
 .footer-logo {
-font-family: "Raleway",
+font-family: "Raleway";
 font-weight: 700;
 font-size: 18px;
 line-height: 1.16667;
